--- a/src/index.css
+++ b/src/index.css
@@ -1159,56 +1159,67 @@ hr {
 
 
 @media screen and (max-width: 768px) {
-    /* Apply styles for tablets */
-    .containerGame,
-    .containerWords {
-        width: 100%; /* Set full width on smaller screens */
-        max-width: none; /* Remove maximum width */
-    }
-
     .containerWholeGame {
         display: flex;
-        justify-content: center; /* Center the content horizontally */
-        align-items: flex-start; /* Align items at the start of the container */
-        flex-wrap: wrap; /* Allow content to wrap to the next line if necessary */
+        justify-content: flex-start;
+        overflow: hidden;
     }
     
     .containerGame {
         background-color: #fff;
         border-radius: 30px;
+        height: 650px;
+        width: 750px;
         text-align: center;
-        margin: 20px; /* Add some margin between the containers */
-        max-width: 600px; /* Adjust the maximum width to fit tablets */
-        width: 90%; /* Set width to a percentage for responsiveness */
     }
     
     .containerWords {
+        margin-left: 100px;
+        margin-top: 50px;
         background-color: #fff;
         border-radius: 30px;
+        height: 650px;
+        width: 350px;
         text-align: center;
-        margin: 20px; /* Add some margin between the containers */
-        max-width: 300px; /* Adjust the maximum width to fit tablets */
-        width: 90%; /* Set width to a percentage for responsiveness */
+        /*overflow: scroll;*/
     }
     
     .gameTitle {
         color: #9d66f0;
-        font-size: 2rem; /* Decrease font size for smaller screens */
-        margin: 2vh auto; /* Adjust margin for smaller screens */
+        font-size: 2 rem;
+        margin: 2vh auto;
+        
     }
+    
     
     .cell {
         display: inline-block;
-        width: 30px; /* Decrease cell width for smaller screens */
-        height: 30px; /* Decrease cell height for smaller screens */
-        line-height: 30px;
-        font-size: 16px; /* Decrease font size for smaller screens */
+        width: 20px; 
+        height: 20px; 
+        line-height: 15px; 
+        font-size: 15px;
+        box-sizing: border-box;
         cursor: pointer;
+        padding-top: 2px;
     }
     
     .wordList {
-        font-size: 1.2rem; /* Decrease font size for smaller screens */
-        margin: 1vh auto; /* Adjust margin for smaller screens */
+        font-size: 1rem;
+        margin: 1vh auto;
+        margin-bottom: 0px;
+    }
+    
+    .gameTitle {
+        margin-bottom: 2vh;
+    }
+    
+    ul {
+        list-style-type: none;
+        padding: 3px;
+    }
+    
+    li {
+        padding:3px;
     }
     
 
