--- a/src/index.css
+++ b/src/index.css
@@ -1221,6 +1221,53 @@ hr {
     li {
         padding:3px;
     }
+
+    .gameButton {
+        background-color: #9d66f0;
+        color: #fff;
+        font-size: 10px;
+        padding: 8px 35px;
+        border: 1px solid transparent;
+        border: 1px solid white;
+        border-radius: 8px;
+        font-weight: 400;
+        letter-spacing: 0.5px;
+        text-transform: uppercase;
+        cursor: pointer;
+        text-align: center;
+        margin-top: 1px;
+        width: 150px;
+        margin-top: 15px;
+    
+    }
+    
+    .gameButton:hover {
+        background-color: #6d5197;
+    }
+    
+    .gameButtonWithMargin {
+        background-color: #9d66f0;
+        color: #fff;
+        font-size: 10px;
+        padding: 8px 35px;
+        border: 1px solid transparent;
+        border: 1px solid white;
+        border-radius: 8px;
+        font-weight: 400;
+        letter-spacing: 0.5px;
+        text-transform: uppercase;
+        cursor: pointer;
+        text-align: center;
+        margin-top: 1px;
+        width: 150px;
+        margin-top: 15px;
+    
+        margin-left: 1vw;
+    }
+    
+    .gameButtonWithMargin:hover {
+        background-color: #6d5197;
+    }
     
 
 }
