--- a/src/index.css
+++ b/src/index.css
@@ -1063,7 +1063,7 @@ hr {
     .containerGame {
         background-color: #fff;
         border-radius: 30px;
-        height: 600px;
+        height: 650px;
         width: 700px;
         text-align: center;
     }
@@ -1073,10 +1073,10 @@ hr {
         margin-top: 50px;
         background-color: #fff;
         border-radius: 30px;
-        height: 450px;
-        width: 300px;
+        height: 475px;
+        width: 350px;
         text-align: center;
-        /*overflow: scroll;*/
+        overflow: scroll;
     }
     
     .gameTitle {
@@ -1089,10 +1089,10 @@ hr {
     
     .cell {
         display: inline-block;
-        width: 20px; 
-        height: 20px; 
-        line-height: 15px; 
-        font-size: 15px;
+        width: 30px; 
+        height: 30px; 
+        line-height: 20px; 
+        font-size: 20px;
         box-sizing: border-box;
         cursor: pointer;
         padding-top: 2px;
