--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    height: 100vh;
+    /*height: 100vh;*/
 }
 
 .container {
@@ -1168,7 +1168,7 @@ hr {
 /*###################*/
 
 
-@media only screen 
+/*@media only screen 
   and (min-device-width: 821px) 
   and (max-device-width: 1180px) 
   and (orientation: landscape) {
@@ -1194,7 +1194,6 @@ hr {
         height: 300px;
         width: 100px;
         text-align: center;
-        /*overflow: scroll;*/
     }
     
     .gameTitle {
@@ -1210,7 +1209,6 @@ hr {
         width: 30px; 
         height: 30px; 
         line-height: 25px; 
-        /*border: 1px solid #ccc; */
         font-size: 20px;
         box-sizing: border-box;
         cursor: pointer;
@@ -1265,6 +1263,104 @@ hr {
     }
     
     
+}*/
+
+
+@media only screen 
+  and (min-device-width: 821px) 
+  and (max-device-width: 1180px) 
+  and (orientation: landscape) {
+
+    .containerWholeGame {
+        display: flex;
+        justify-content: center; /* Center the game horizontally */
+        align-items: center; /* Center the game vertically */
+        height: 100vh; /* Use full height of the screen */
+        overflow: hidden; /* Prevent scrolling */
+    }
+    
+    .containerGame {
+        background-color: #fff;
+        border-radius: 30px;
+        height: calc(100vh - 40px); /* Adjust height of game container */
+        width: calc(50vw - 20px); /* Adjust width of game container */
+        text-align: center;
+        margin: 10px; /* Add margin for spacing */
+        overflow: auto; /* Allow scrolling if necessary */
+    }
+    
+    .containerWords {
+        margin-left: 10px; /* Adjust margin for spacing */
+        margin-right: 10px; /* Adjust margin for spacing */
+        background-color: #fff;
+        border-radius: 30px;
+        height: calc(100vh - 40px); /* Adjust height of word container */
+        width: calc(50vw - 20px); /* Adjust width of word container */
+        text-align: center;
+        margin: 10px; /* Add margin for spacing */
+        overflow: auto; /* Allow scrolling if necessary */
+    }
+    
+    .gameTitle {
+        color: #9d66f0;
+        font-size: 2.5rem;
+        margin: 2vh auto;
+        
+    }
+    
+    
+    .cell {
+        display: inline-block;
+        width: 30px; 
+        height: 30px; 
+        line-height: 25px; 
+        font-size: 20px;
+        cursor: pointer;
+        padding-top: 3px;
+    }
+
+    .gameButton {
+        background-color: #9d66f0;
+        color: #fff;
+        font-size: 12px;
+        padding: 10px 45px;
+        border: 1px solid transparent;
+        border-radius: 8px;
+        font-weight: 600;
+        letter-spacing: 0.5px;
+        text-transform: uppercase;
+        cursor: pointer;
+        text-align: center;
+        margin-top: 1px;
+        width: 150px;
+        margin-top: 20px;
+    }
+    
+    .gameButton:hover {
+        background-color: #6d5197;
+    }
+    
+    .gameButtonWithMargin {
+        background-color: #9d66f0;
+        color: #fff;
+        font-size: 12px;
+        padding: 10px 45px;
+        border: 1px solid transparent;
+        border-radius: 8px;
+        font-weight: 600;
+        letter-spacing: 0.5px;
+        text-transform: uppercase;
+        cursor: pointer;
+        text-align: center;
+        margin-top: 1px;
+        width: 150px;
+        margin-top: 20px;
+        margin-left: 1vw;
+    }
+    
+    .gameButtonWithMargin:hover {
+        background-color: #6d5197;
+    }
 }
 
 
