--- a/src/index2.css
+++ b/src/index2.css
@@ -22,6 +22,7 @@ body {
     justify-content: center;
     flex-direction: column;
     height: 100vh;
+    width: 100vw;
 }
 
 .container {
@@ -1215,11 +1216,11 @@ hr {
 
 .cell {
     display: inline-block;
-    width: 30px; 
-    height: 30px; 
-    line-height: 20px; 
+    width: 40px; 
+    height: 40px; 
+    line-height: 30px; 
     /*border: 1px solid #ccc; */
-    font-size: 15px;
+    font-size: 20px;
     box-sizing: border-box;
     cursor: pointer;
     padding-top: 3px;
@@ -1268,17 +1269,17 @@ li {
     background-color: #9d66f0;
     color: #fff;
     font-size: 12px;
-    padding: 10px 45px;
+    padding: 7px 30px;
     border: 1px solid transparent;
     border: 1px solid white;
     border-radius: 8px;
-    font-weight: 600;
+    font-weight: 400;
     letter-spacing: 0.5px;
     text-transform: uppercase;
     cursor: pointer;
     text-align: center;
     margin-top: 1px;
-    width: 200px;
+    width: 100px;
     margin-top: 25px;
 
 }
@@ -1291,17 +1292,17 @@ li {
     background-color: #9d66f0;
     color: #fff;
     font-size: 12px;
-    padding: 10px 45px;
+    padding: 7px 30px;
     border: 1px solid transparent;
     border: 1px solid white;
     border-radius: 8px;
-    font-weight: 600;
+    font-weight: 400;
     letter-spacing: 0.5px;
     text-transform: uppercase;
     cursor: pointer;
     text-align: center;
     margin-top: 1px;
-    width: 200px;
+    width: 100px;
     margin-top: 25px;
 
     margin-left: 1vw;
