--- a/src/index2.css
+++ b/src/index2.css
@@ -12,8 +12,6 @@ zatamnjenje za gumb: #6d5197*/
     /*font-family: 'Montserrat', sans-serif;*/
     font-family: "Poetsen One", sans-serif;
 
-    height: 100vh;
-    width: 100vw;
 }
 
 body {
@@ -24,6 +22,11 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+
+    height: 100vh;
+    width: 100vw;
+
+    overflow: hidden;
 
 }
 
