--- a/src/index2.css
+++ b/src/index2.css
@@ -1199,11 +1199,14 @@ hr {
     height: 650px;
     width: 600px;
     text-align: center;
+
+    margin-top: -30px;
 }
 
 .containerWords {
     margin-left: 50px;
-    margin-top: 50px;
+    /*margin-top: 50px;*/
+    margin-top: 20px;
     background-color: #fff;
     border-radius: 30px;
     height: 550px;
