--- a/src/index2.css
+++ b/src/index2.css
@@ -19,7 +19,7 @@ body {
     background-repeat: no-repeat;
     background-size: 100% 100%;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     flex-direction: column;
 
@@ -1200,13 +1200,13 @@ hr {
     width: 600px;
     text-align: center;
 
-    margin-top: -30px;
+    margin-top: 30px;
 }
 
 .containerWords {
-    margin-left: 50px;
+    margin-left: 75px;
     /*margin-top: 50px;*/
-    margin-top: 20px;
+    margin-top: 80px;
     background-color: #fff;
     border-radius: 30px;
     height: 550px;
