Fixing margins and icon

--- a/src/index2.css
+++ b/src/index2.css
@@ -1191,6 +1191,7 @@ hr {
 .containerWholeGame {
     display: flex;
     justify-content: flex-start;
+    align-content: flex-start;
     overflow: hidden;
 }
 
