--- a/src/index2.css
+++ b/src/index2.css
@@ -19,10 +19,14 @@ body {
     background-repeat: no-repeat;
     background-size: 100% 100%;
     display: flex;
-    align-items: flex-start;
+    /*align-items: flex-start;
     align-content: flex-start;
-    justify-content: center;
+    justify-content: center;*/
     flex-direction: column;
+
+    justify-content: flex-start; 
+    align-items: center;
+
 
     height: 100vh;
     width: 100vw;
