--- a/src/index2.css
+++ b/src/index2.css
@@ -5,6 +5,8 @@ svijetlija: #ad85e9
 tamnija: #9d66f0
 zatamnjenje za gumb: #6d5197*/
 
+
+
 * {
     margin: 0;
     padding: 0;
@@ -1126,7 +1128,13 @@ hr {
     height: 550px;
     width: 300px;
     text-align: center;
-    overflow: scroll;
+    /*overflow: scroll;*/
+    overflow: hidden;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
 .gameTitle {
@@ -1134,6 +1142,15 @@ hr {
     font-size: 2rem;
     margin: 2vh auto;
     
+}
+
+.containerWordsScrollable {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    overflow: scroll;
 }
 
 
@@ -1204,7 +1221,7 @@ ul {
     text-align: center;
     margin-top: 1px;
     width: 175px;
-    margin-top: 25px;
+    margin-top: 15px;
 
 }
 
@@ -1227,7 +1244,7 @@ ul {
     text-align: center;
     margin-top: 1px;
     width: 175px;
-    margin-top: 25px;
+    margin-top: 15px;
 
     margin-left: 1vw;
 }
