Additional CSS changes

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    height: 100vh;
+    /*height: 100vh;*/
 }
 
 .container {
@@ -29,7 +29,6 @@ body {
     border-radius: 30px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
     position: relative;
-    overflow: hidden;
 
 
     width: 800px;
