--- a/src/index2.css
+++ b/src/index2.css
@@ -1150,6 +1150,7 @@ hr {
 
 .containerWordsScrollable {
     width: 100%;
+    height: 75%;
     display: flex;
     flex-direction: column;
     align-items: center;
