--- a/src/index2.css
+++ b/src/index2.css
@@ -1155,8 +1155,7 @@ hr {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    overflow-y: auto; /* Enable vertical scrolling */
-    flex-grow: 1; /* Take up remaining space between title and button */
+    overflow: scroll;
 }
 
 .wordsListScrollable ul {
@@ -1271,6 +1270,6 @@ ul {
     color: #9d66f0;
     font-size: 2rem;
     margin: 3vh auto;
-    margin-bottom: 4vh;
+    margin-bottom: 2.5vh;
 }
 }
